[gd_scene load_steps=24 format=2]

[ext_resource path="res://Scripts/Tutorial.gd" type="Script" id=1]
[ext_resource path="res://Tilesets/FloorTiles.tres" type="TileSet" id=2]
[ext_resource path="res://Tilesets/AutoTileWalls.tres" type="TileSet" id=3]
[ext_resource path="res://Scenes/Door.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Music.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/VisionMode.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Briefcase.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Exit.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Computer.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/LockedDoor.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/CombinationGenerator.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/Characters/Player.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/Folder.tscn" type="PackedScene" id=13]
[ext_resource path="res://GFX/radial.png" type="Texture" id=14]
[ext_resource path="res://Lightmaps/torchmap.png" type="Texture" id=15]
[ext_resource path="res://GFX/Interface/PNG/crossair_blueOutline.png" type="Texture" id=16]
[ext_resource path="res://SFX/message.wav" type="AudioStream" id=17]
[ext_resource path="res://Scenes/TutorialGUI.tscn" type="PackedScene" id=18]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 110, 70 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 40, 30 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 30, 40 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 60, 30 )

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 10, 30 )

[node name="Tutorial" type="Node2D" index="0"]

position = Vector2( 0, 10 )
script = ExtResource( 1 )

[node name="Floors" type="TileMap" parent="." index="0"]

mode = 0
tile_set = ExtResource( 2 )
cell_size = Vector2( 64, 64 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 2
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 3, 0, 0, 4, 0, 0, 5, 0, 0, 6, 0, 0, 7, 0, 0, 8, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65546, 0, 0, 65547, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65554, 1, 0, 65555, 1, 0, 65556, 1, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131081, 0, 0, 131082, 0, 0, 131083, 0, 0, 131084, 0, 0, 131085, 0, 0, 131086, 0, 0, 131087, 0, 0, 131088, 1, 0, 131089, 1, 0, 131090, 1, 0, 131092, 1, 0, 196608, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196612, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196628, 1, 0, 262144, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 1, 0, 262154, 1, 0, 262155, 1, 0, 262156, 1, 0, 262157, 1, 0, 262158, 1, 0, 262159, 1, 0, 262160, 1, 0, 262161, 1, 0, 262162, 1, 0, 262164, 1, 0, 262165, 1, 0, 262166, 1, 0, 327680, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327689, 1, 0, 327690, 1, 0, 327691, 1, 0, 327692, 1, 0, 327693, 1, 0, 327694, 1, 0, 327695, 1, 0, 327696, 1, 0, 327697, 1, 0, 327698, 1, 0, 327702, 1, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393225, 1, 0, 393226, 1, 0, 393227, 1, 0, 393228, 1, 0, 393229, 1, 0, 393230, 1, 0, 393231, 1, 0, 393232, 1, 0, 393233, 1, 0, 393234, 1, 0, 393236, 1, 0, 393237, 1, 0, 393238, 1, 0, 458752, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 1, 0, 458762, 1, 0, 458763, 1, 0, 458764, 1, 0, 458765, 1, 0, 458766, 1, 0, 458767, 1, 0, 458768, 1, 0, 458769, 1, 0, 458770, 1, 0, 458772, 1, 0, 524297, 1, 0, 524298, 1, 0, 524299, 1, 0, 524300, 1, 0, 524301, 1, 0, 524302, 1, 0, 524303, 1, 0, 524304, 1, 0, 524305, 1, 0, 524306, 1, 0, 524307, 1, 0, 524308, 1, 0, 524309, 1, 0, 524310, 1, 0, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 589836, 1, 0, 589837, 1, 0, 589838, 1, 0, 589839, 1, 0, 589840, 1, 0, 589841, 1, 0, 589842, 1, 0, 589843, 1, 0, 589844, 1, 0, 589845, 1, 0, 589846, 1, 0, 655369, 1, 0, 655370, 1, 0, 655371, 1, 0, 655372, 1, 0, 655373, 1, 0, 655374, 1, 0, 655375, 1, 0, 655376, 1, 0, 655377, 1, 0, 655378, 1, 0, 655380, 1, 0, 655381, 1, 0, 655382, 1, 0, 720905, 1, 0, 720906, 1, 0, 720907, 1, 0, 720908, 1, 0, 720909, 1, 0, 720910, 1, 0, 720911, 1, 0, 720912, 1, 0, 720913, 1, 0, 720914, 1, 0, 720916, 1, 0, 720917, 1, 0, 720918, 1, 0, 786441, 1, 0, 786442, 1, 0, 786443, 1, 0, 786444, 1, 0, 786445, 1, 0, 786446, 1, 0, 786447, 1, 0, 786448, 1, 0, 786449, 1, 0, 786450, 1, 0, 786452, 1, 0, 786453, 1, 0, 786454, 1, 0 )
_sections_unfolded = [ "Collision" ]

[node name="Walls" type="TileMap" parent="." index="1"]

mode = 0
tile_set = ExtResource( 3 )
cell_size = Vector2( 64, 64 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = false
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 2
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray( 0, 0, 262144, 1, 0, 262146, 2, 0, 262146, 3, 0, 262146, 4, 0, 262146, 5, 0, 262146, 6, 0, 262146, 7, 0, 262146, 8, 0, 524292, 9, 0, 524293, 10, 0, 262146, 11, 0, 262146, 12, 0, 262146, 13, 0, 262146, 14, 0, 262146, 15, 0, 262145, 17, 0, 262144, 18, 0, 262146, 19, 0, 262146, 20, 0, 262146, 21, 0, 262145, 65536, 0, 327682, 65544, 0, 327687, 65545, 0, 327688, 65551, 0, 327680, 65552, 0, 262146, 65553, 0, 327681, 65557, 0, 327682, 131072, 0, 327682, 131091, 0, 327685, 131093, 0, 327682, 196608, 0, 327682, 196616, 0, 262144, 196617, 0, 262146, 196618, 0, 262146, 196619, 0, 262146, 196620, 0, 262146, 196621, 0, 262146, 196622, 0, 262146, 196623, 0, 262146, 196624, 0, 262146, 196625, 0, 262146, 196626, 0, 262146, 196627, 0, 327684, 196629, 0, 327680, 196630, 0, 262146, 196631, 0, 262145, 262144, 0, 327682, 262152, 0, 327682, 262163, 0, 327682, 262167, 0, 327682, 327680, 0, 327682, 327688, 0, 327682, 327699, 0, 327683, 327700, 0, 262146, 327701, 0, 262149, 327703, 0, 327682, 393216, 0, 327682, 393224, 0, 327682, 393235, 0, 327682, 393239, 0, 327682, 458752, 0, 327680, 458753, 0, 262146, 458754, 0, 262146, 458755, 0, 262146, 458756, 0, 262146, 458757, 0, 262146, 458758, 0, 262146, 458759, 0, 262146, 458760, 0, 327684, 458771, 0, 327682, 458773, 0, 327686, 458774, 0, 262146, 458775, 0, 327684, 524296, 0, 327682, 524307, 0, 262150, 524311, 0, 327682, 589832, 0, 327682, 589847, 0, 327682, 655368, 0, 327682, 655379, 0, 327685, 655383, 0, 327682, 720904, 0, 327682, 720915, 0, 327682, 720919, 0, 327682, 786440, 0, 327682, 786451, 0, 327682, 786455, 0, 327682, 851976, 0, 327680, 851977, 0, 262146, 851978, 0, 262146, 851979, 0, 262146, 851980, 0, 262146, 851981, 0, 262146, 851982, 0, 262146, 851983, 0, 262146, 851984, 0, 262146, 851985, 0, 262146, 851986, 0, 262146, 851987, 0, 262148, 851988, 0, 262146, 851989, 0, 262146, 851990, 0, 262146, 851991, 0, 327681 )
_sections_unfolded = [ "Collision" ]

[node name="Door" parent="." index="2" instance=ExtResource( 4 )]

position = Vector2( 990, 160 )
rotation = -1.57252

[node name="Music" parent="." index="3" instance=ExtResource( 5 )]

[node name="VisionMode" parent="." index="4" instance=ExtResource( 6 )]

color = Color( 0.0407104, 0.0784613, 0.226563, 1 )

[node name="Briefcase" parent="." index="5" instance=ExtResource( 7 )]

position = Vector2( 670, 790 )

[node name="Exit" parent="." index="6" instance=ExtResource( 8 )]

margin_left = 790.0
margin_top = 260.0
margin_right = 1056.0
margin_bottom = 411.0

[node name="Computer" parent="." index="7" instance=ExtResource( 9 )]

position = Vector2( 1369.64, 796.635 )
rotation = -1.57062
combination_length = 3
lock_group = "Tutorial"

[node name="LockedDoor" parent="." index="8" instance=ExtResource( 10 )]

position = Vector2( 1245.4, 610.006 )
rotation = -1.57575

[node name="CombinationGenerator" parent="." index="9" instance=ExtResource( 11 )]

[node name="Player" parent="." index="10" instance=ExtResource( 12 )]

editor/display_folded = true
position = Vector2( 150, 240 )

[node name="Camera2D" type="Camera2D" parent="Player" index="7"]

position = Vector2( 0, 10 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false
_sections_unfolded = [ "Limit" ]

[node name="Folder" parent="." index="11" instance=ExtResource( 13 )]

position = Vector2( 1440, 570 )

[node name="Light2D" type="Light2D" parent="." index="12"]

position = Vector2( 380, 200 )
enabled = true
editor_only = false
texture = ExtResource( 14 )
offset = Vector2( 0, 0 )
texture_scale = 1.0
color = Color( 1, 1, 1, 1 )
energy = 1.0
mode = 0
range_height = 0.0
range_z_min = -1024
range_z_max = 1024
range_layer_min = 0
range_layer_max = 0
range_item_cull_mask = 1
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 0 )
shadow_buffer_size = 2048
shadow_gradient_length = 0.0
shadow_filter = 0
shadow_filter_smooth = 0.0
shadow_item_cull_mask = 1
_sections_unfolded = [ "Shadow" ]

[node name="Light2D2" type="Light2D" parent="." index="13"]

position = Vector2( 764.702, 65.1077 )
rotation = 0.361235
scale = Vector2( 0.5, 0.5 )
enabled = true
editor_only = false
texture = ExtResource( 15 )
offset = Vector2( 320, 0 )
texture_scale = 1.0
color = Color( 1, 1, 1, 1 )
energy = 1.0
mode = 0
range_height = 0.0
range_z_min = -1024
range_z_max = 1024
range_layer_min = 0
range_layer_max = 0
range_item_cull_mask = 1
shadow_enabled = true
shadow_color = Color( 0, 0, 0, 0 )
shadow_buffer_size = 2048
shadow_gradient_length = 0.0
shadow_filter = 0
shadow_filter_smooth = 0.0
shadow_item_cull_mask = 1
_sections_unfolded = [ "Shadow", "Transform" ]

[node name="ObjectiveAreas" type="Node2D" parent="." index="14"]

editor/display_folded = true

[node name="ObjectiveMove" type="Area2D" parent="ObjectiveAreas" index="0"]

editor/display_folded = true
position = Vector2( 810, 150 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 2
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveAreas/ObjectiveMove" index="0"]

position = Vector2( 0, -20 )
shape = SubResource( 1 )

[node name="ObjectiveDoor" type="Area2D" parent="ObjectiveAreas" index="1"]

editor/display_folded = true
position = Vector2( 1040, 160 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveAreas/ObjectiveDoor" index="0"]

shape = SubResource( 2 )

[node name="ObjectiveNightVision" type="Area2D" parent="ObjectiveAreas" index="2"]

editor/display_folded = true
position = Vector2( 1310, 480 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveAreas/ObjectiveNightVision" index="0"]

shape = SubResource( 3 )

[node name="ObjectiveComputer" type="Area2D" parent="ObjectiveAreas" index="3"]

editor/display_folded = true
position = Vector2( 1370, 800 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveAreas/ObjectiveComputer" index="0"]

position = Vector2( 0, -30 )
shape = SubResource( 4 )

[node name="ObjectiveDoor2" type="Area2D" parent="ObjectiveAreas" index="4"]

editor/display_folded = true
position = Vector2( 1270, 610 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ObjectiveAreas/ObjectiveDoor2" index="0"]

shape = SubResource( 5 )

[node name="ObjectiveMarkers" type="Node2D" parent="." index="15"]

[node name="MoveObjective" type="Position2D" parent="ObjectiveMarkers" index="0"]

position = Vector2( 710, 150 )

[node name="DoorObjective" type="Position2D" parent="ObjectiveMarkers" index="1"]

position = Vector2( 1000, 160 )

[node name="NightVisionObjective" type="Position2D" parent="ObjectiveMarkers" index="2"]

position = Vector2( 1310, 450 )

[node name="LootObjective" type="Position2D" parent="ObjectiveMarkers" index="3"]

position = Vector2( 1440, 570 )

[node name="ComputerObjective" type="Position2D" parent="ObjectiveMarkers" index="4"]

position = Vector2( 1370, 790 )

[node name="DoorObjective2" type="Position2D" parent="ObjectiveMarkers" index="5"]

position = Vector2( 1250, 610 )

[node name="LootObjective2" type="Position2D" parent="ObjectiveMarkers" index="6"]

position = Vector2( 660, 790 )

[node name="ExitObjective" type="Position2D" parent="ObjectiveMarkers" index="7"]

position = Vector2( 920, 380 )

[node name="ObjectivePointer" type="Sprite" parent="." index="16"]

position = Vector2( -40, 500 )
texture = ExtResource( 16 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_group_": true
}

[node name="Light2D" type="Light2D" parent="ObjectivePointer" index="0"]

enabled = true
editor_only = false
texture = ExtResource( 16 )
offset = Vector2( 0, 0 )
texture_scale = 1.0
color = Color( 1, 1, 1, 1 )
energy = 1.0
mode = 0
range_height = 0.0
range_z_min = -1024
range_z_max = 1024
range_layer_min = 0
range_layer_max = 0
range_item_cull_mask = 1
shadow_enabled = false
shadow_color = Color( 0, 0, 0, 0 )
shadow_buffer_size = 2048
shadow_gradient_length = 0.0
shadow_filter = 0
shadow_filter_smooth = 0.0
shadow_item_cull_mask = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="17"]

stream = ExtResource( 17 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Tween" type="Tween" parent="." index="18"]

repeat = false
playback_process_mode = 1
playback_speed = 1.0
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="TutorialGUI" parent="." index="19" instance=ExtResource( 18 )]

[connection signal="body_entered" from="Briefcase" to="." method="_on_Briefcase_body_entered"]

[connection signal="combination" from="Computer" to="LockedDoor" method="_on_Computer_combination"]

[connection signal="body_entered" from="Folder" to="." method="_on_Folder_body_entered"]

[connection signal="body_entered" from="ObjectiveAreas/ObjectiveMove" to="." method="_on_ObjectiveMove_body_entered"]

[connection signal="body_entered" from="ObjectiveAreas/ObjectiveDoor" to="." method="_on_ObjectiveDoor_body_entered"]

[connection signal="body_entered" from="ObjectiveAreas/ObjectiveNightVision" to="." method="_on_ObjectiveNightVision_body_entered"]

[connection signal="body_entered" from="ObjectiveAreas/ObjectiveComputer" to="." method="_on_ObjectiveComputer_body_entered"]

[connection signal="body_entered" from="ObjectiveAreas/ObjectiveDoor2" to="." method="_on_ObjectiveDoor2_body_entered"]


